<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/cdv"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gold"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:background="@android:color/transparent"
                    android:text="Lastname"
                    android:ems="10"
                    android:textColor="#CECECE"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="180dp"
                    android:id="@+id/editlastname"/>

                <com.CDV.util.RoundedImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/img"
                        android:onClick="choosePicture"
                        android:src="@mipmap/ic_launcher"/>

                <EditText
                    android:text="adress, postal, city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="#CECECE"
                    android:textSize="15dp"
                    android:id="@+id/editcity"
                    android:layout_marginTop="27dp"
                    android:layout_alignTop="@+id/editnumero"
                    android:layout_alignStart="@+id/editnumero"
                    />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="#CECECE"
                        android:text="Email"
                        android:padding="5dp"
                        android:textSize="13dp"
                        android:ems="10"
                        android:background="@android:color/transparent"
                        android:id="@+id/editemail"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/img" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:background="@android:color/transparent"
                    android:text="Name"
                    android:ems="10"
                    android:textColor="#CECECE"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:layout_alignStart="@+id/editemail"
                    android:id="@+id/editname" />

                <EditText
                        android:text="Numero"
                        android:inputType="numberDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:id="@+id/editnumero"
                        android:textSize="15dp"
                        android:textColor="#CECECE"
                        android:padding="10dp"
                        android:ems="15"
                        android:layout_marginTop="27dp"
                        android:layout_alignTop="@+id/editemail"
                        android:layout_alignStart="@+id/editemail" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/qr_code"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:id="@+id/imageView"
                    android:layout_alignParentEnd="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/send_number"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/phone"
                    android:layout_gravity="center" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send"
                    android:id="@+id/Send"
                    android:layout_gravity="center_horizontal"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    >
                </View>

                <Button
                    android:id="@+id/Scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Scan"
                    android:onClick="Scanner"
                    />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFF00">
        </View>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layoutcdv"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:src="@drawable/add"
                    />
                <TextView
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="Afficher carte de visite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/textView4" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFF00">
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layoutgenerer"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:src="@drawable/abc_btn_radio_to_on_mtrl_015"
                    />
                <TextView
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:text="Générer QrCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/textView2" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFF00">
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/layoutSend"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="5"
                    android:src="@drawable/ic_menu_send"
                    />

                <TextView
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:layout_weight="2"
                    android:text="Echanger cartes de visites"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView3" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFF00">
            </View>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>